--- a/microprobe_app/mainwindow.ui
+++ b/microprobe_app/mainwindow.ui
@@ -23,7 +23,7 @@
       <x>10</x>
       <y>10</y>
       <width>351</width>
-      <height>241</height>
+      <height>181</height>
      </rect>
     </property>
     <property name="title">
@@ -128,14 +128,17 @@
     <widget class="QCheckBox" name="checkBox">
      <property name="geometry">
       <rect>
-       <x>20</x>
+       <x>240</x>
        <y>150</y>
-       <width>91</width>
-       <height>24</height>
+       <width>77</width>
+       <height>22</height>
       </rect>
      </property>
      <property name="text">
-      <string>Mirroring</string>
+      <string>Hold</string>
+     </property>
+     <property name="checked">
+      <bool>false</bool>
      </property>
     </widget>
    </widget>
@@ -145,7 +148,7 @@
       <x>690</x>
       <y>10</y>
       <width>441</width>
-      <height>241</height>
+      <height>191</height>
      </rect>
     </property>
     <property name="title">
@@ -297,7 +300,7 @@
      <property name="geometry">
       <rect>
        <x>320</x>
-       <y>20</y>
+       <y>30</y>
        <width>71</width>
        <height>20</height>
       </rect>
@@ -309,8 +312,8 @@
     <widget class="QLabel" name="label_13">
      <property name="geometry">
       <rect>
-       <x>160</x>
-       <y>20</y>
+       <x>170</x>
+       <y>30</y>
        <width>111</width>
        <height>20</height>
       </rect>
@@ -358,19 +361,6 @@
       <string>Calibration</string>
      </property>
     </widget>
-    <widget class="QPushButton" name="pushButton_5">
-     <property name="geometry">
-      <rect>
-       <x>30</x>
-       <y>70</y>
-       <width>93</width>
-       <height>29</height>
-      </rect>
-     </property>
-     <property name="text">
-      <string>Setup</string>
-     </property>
-    </widget>
     <widget class="QPushButton" name="pushButton_13">
      <property name="geometry">
       <rect>
@@ -382,6 +372,19 @@
      </property>
      <property name="text">
       <string>Test script</string>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="pushButton_5">
+     <property name="geometry">
+      <rect>
+       <x>30</x>
+       <y>70</y>
+       <width>93</width>
+       <height>29</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Setup</string>
      </property>
     </widget>
    </widget>
@@ -426,10 +429,10 @@
     <widget class="QPushButton" name="pushButton_9">
      <property name="geometry">
       <rect>
-       <x>20</x>
-       <y>90</y>
-       <width>93</width>
-       <height>81</height>
+       <x>10</x>
+       <y>120</y>
+       <width>91</width>
+       <height>31</height>
       </rect>
      </property>
      <property name="text">
@@ -440,9 +443,9 @@
      <property name="geometry">
       <rect>
        <x>120</x>
-       <y>10</y>
-       <width>211</width>
-       <height>91</height>
+       <y>30</y>
+       <width>121</width>
+       <height>51</height>
       </rect>
      </property>
      <property name="text">
@@ -453,9 +456,9 @@
      <property name="geometry">
       <rect>
        <x>120</x>
-       <y>170</y>
-       <width>211</width>
-       <height>91</height>
+       <y>210</y>
+       <width>121</width>
+       <height>51</height>
       </rect>
      </property>
      <property name="text">
@@ -511,6 +514,28 @@
       <string>F increment [mN]</string>
      </property>
     </widget>
+    <widget class="QSlider" name="verticalSlider">
+     <property name="geometry">
+      <rect>
+       <x>300</x>
+       <y>60</y>
+       <width>16</width>
+       <height>160</height>
+      </rect>
+     </property>
+     <property name="minimum">
+      <number>-100</number>
+     </property>
+     <property name="maximum">
+      <number>100</number>
+     </property>
+     <property name="sliderPosition">
+      <number>0</number>
+     </property>
+     <property name="orientation">
+      <enum>Qt::Vertical</enum>
+     </property>
+    </widget>
    </widget>
    <widget class="QGroupBox" name="groupBox_5">
     <property name="geometry">
@@ -527,9 +552,9 @@
     <widget class="QLineEdit" name="lineEdit_3">
      <property name="geometry">
       <rect>
-       <x>130</x>
+       <x>100</x>
        <y>40</y>
-       <width>113</width>
+       <width>41</width>
        <height>26</height>
       </rect>
      </property>
@@ -553,9 +578,9 @@
     <widget class="QLineEdit" name="lineEdit_9">
      <property name="geometry">
       <rect>
-       <x>130</x>
+       <x>100</x>
        <y>80</y>
-       <width>113</width>
+       <width>41</width>
        <height>26</height>
       </rect>
      </property>
@@ -579,9 +604,9 @@
     <widget class="QLineEdit" name="lineEdit_10">
      <property name="geometry">
       <rect>
-       <x>130</x>
+       <x>100</x>
        <y>120</y>
-       <width>113</width>
+       <width>41</width>
        <height>26</height>
       </rect>
      </property>
@@ -605,9 +630,9 @@
     <widget class="QLineEdit" name="lineEdit_11">
      <property name="geometry">
       <rect>
-       <x>130</x>
+       <x>100</x>
        <y>160</y>
-       <width>113</width>
+       <width>41</width>
        <height>26</height>
       </rect>
      </property>
@@ -647,12 +672,90 @@
       <bool>false</bool>
      </property>
     </widget>
+    <widget class="QLineEdit" name="lineEdit_8">
+     <property name="geometry">
+      <rect>
+       <x>240</x>
+       <y>40</y>
+       <width>41</width>
+       <height>26</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>0.5</string>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_14">
+     <property name="geometry">
+      <rect>
+       <x>160</x>
+       <y>40</y>
+       <width>101</width>
+       <height>20</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Kp</string>
+     </property>
+    </widget>
+    <widget class="QLineEdit" name="lineEdit_12">
+     <property name="geometry">
+      <rect>
+       <x>240</x>
+       <y>80</y>
+       <width>41</width>
+       <height>26</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>0.1</string>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_15">
+     <property name="geometry">
+      <rect>
+       <x>160</x>
+       <y>80</y>
+       <width>101</width>
+       <height>20</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Ki</string>
+     </property>
+    </widget>
+    <widget class="QLineEdit" name="lineEdit_13">
+     <property name="geometry">
+      <rect>
+       <x>240</x>
+       <y>120</y>
+       <width>41</width>
+       <height>26</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>0.1</string>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_16">
+     <property name="geometry">
+      <rect>
+       <x>160</x>
+       <y>120</y>
+       <width>101</width>
+       <height>20</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Kd</string>
+     </property>
+    </widget>
    </widget>
    <widget class="QGroupBox" name="groupBox_6">
     <property name="geometry">
      <rect>
-      <x>620</x>
-      <y>270</y>
+      <x>820</x>
+      <y>260</y>
       <width>120</width>
       <height>80</height>
      </rect>
@@ -668,7 +771,7 @@
      <x>0</x>
      <y>0</y>
      <width>1155</width>
-     <height>26</height>
+     <height>21</height>
     </rect>
    </property>
   </widget>
