--- a/microprobe_app/mainwindow.ui
+++ b/microprobe_app/mainwindow.ui
@@ -848,7 +848,7 @@
       </rect>
      </property>
      <property name="text">
-      <string>.tsv</string>
+      <string>.csv</string>
      </property>
     </widget>
     <widget class="QPushButton" name="pushButton_19">
@@ -862,6 +862,19 @@
      </property>
      <property name="text">
       <string>Record</string>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="pushButton_20">
+     <property name="geometry">
+      <rect>
+       <x>200</x>
+       <y>70</y>
+       <width>93</width>
+       <height>29</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Save</string>
      </property>
     </widget>
    </widget>
